Fix broken stylesheet in keybinder widget

--- a/QTfrontend/res/css/birthday.css
+++ b/QTfrontend/res/css/birthday.css
@@ -552,3 +552,6 @@ QProgressBar::chunk {
 background-color: #FF9B00;
 margin: 2px;
 }
+#keyBinderScrollArea {
+background: #100308; /* CUSTOM */
+}
